[tool.poetry]
name = "guard-prompt"
version = "0.1.0"
description = "A Python library to protect prompt engineering against theft"
authors = ["feng<feng000@gmail.com>",]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
